clusters/production/apps/home-assistant-production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: home-assistant-production
  labels:
    app.kubernetes.io/part-of: production
