clusters/production/apps/home-assistant-production/cilium-cluster-nodes-to-http.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-cluster-nodes-to-home-assistant-http
  namespace: home-assistant-production
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
  ingress:
  - fromEntities:
    - host
    - remote-node
    toPorts:
    - ports:
      - port: "8123"
        protocol: TCP
